
  ...to avoid collisions with variables set in rules. The old, non-prefixed
  keywords are still accepted, but they should be removed before 1.0.

- ADDED: functions to ext.i18n: get_timezone_name(), parse_date(),
  parse_datetime() and parse_time().

- All datetime and number format functions in ext.i18n now accept a locale
  argument. If not set, uses the currently loaded locale (as before).

- ADDED: a Request object that extends werkzeug's Request. This is backwards
  compatible but adds some flexibility points. The new Request:

  - Checks if the requested method is allowed in App Engine.
  - Matches the URL and returns a callable to the app.
  - Stores url_adapter, matched rule and rule arguments.

  This makes it easier to implement alternative URL matching and handler
  strategies -- for example, to use simple functions as handlers or classes
  with methods not based on the current HTTP method. It is just a matter
  of creating a new Request class with a different match_url() implementation.

  Also it makes more sense to store url_adapter, matched rule and rule
  arguments in the request than in the app. app.url_adapter, app.rule and
  app.rule_args are still set, but they will be removed on 1.0.

- CHANGED: the signature of RequestHandler.dispatch(). The old signature
  dispatch(request_method, **rule_args) will still be valid until 1.0.

- ADDED: request as an attribute of RequestHandler. self.request is set on
  dispatch().


Version 0.5.2 - May 06, 2010
============================
- Added a buildout setup to manage external dependencies. It is now
  the preferred method for setting and updating tipfy and app libraries.
  A full build will still be provided, though.

- Experimental support for loading all libraries using zipimport. The buildout
  setup is capable of generating the zip and it is included in sys.path by
  default. (issue #12)

- Tipfy can now be installed using easy_install.
